--- a/exercises/jsonplaceholder/users.html
+++ b/exercises/jsonplaceholder/users.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Users</title>
   </head>
   <body>
     <header>
@@ -14,12 +14,13 @@
       </nav>
     </header>
     <main>
-      <h1>Home</h1>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptates earum aut praesentium ipsa
-        repellendus itaque sunt alias voluptate dolores fuga atque, possimus, aliquam odio veritatis. Dignissimos
-        laudantium atque deserunt.
-      </p>
+      <h1>Users</h1>
+      <table>
+        <thead></thead>
+        <tbody id="usersTableBody"></tbody>
+      </table>
+     
     </main>
+  <script src="scripts/users.js"></script>  
   </body>
 </html>
