examine response, one v many p2

--- a/exercises/jsonplaceholder/users.html
+++ b/exercises/jsonplaceholder/users.html
@@ -16,11 +16,27 @@
     <main>
       <h1>Users</h1>
       <table>
-        <thead></thead>
-        <tbody id="usersTableBody"></tbody>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Website</th>
+          </tr>
+        </thead>
+        <tbody id="usersTableBody">
+            <tr>
+                <td>Leanne Graham</td>
+                <td>Sincere@april.biz</td>
+                <td>hildegard.org</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+        </tbody>
       </table>
-     
     </main>
-  <script src="scripts/users.js"></script>  
+    <script src="scripts/users.js"></script>
   </body>
 </html>
