--- a/exercises/courses/index.html
+++ b/exercises/courses/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <main>
@@ -12,9 +12,9 @@
       <table>
         <thead>
           <tr>
-            <th>Department</th>
             <th>Course Number</th>
             <th>Course Name</th>
+            <th>Department</th>
           </tr>
         </thead>
         <tbody id="coursesTableBody">
