--- a/exercises/courses/index.html
+++ b/exercises/courses/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <header>
+      <a href="index.html">Courses</a>
+    </header>
     <main>
       <h1></h1>
       <table>
@@ -15,13 +18,14 @@
             <th>Course Number</th>
             <th>Course Name</th>
             <th>Department</th>
+           
           </tr>
         </thead>
         <tbody id="coursesTableBody">
           <!-- <tr>
-            <td>CompSci</td>
             <td>101</td>
-            <td>HTML5 and CSS3</td>
+            <td><a href="details.html">HTML5 and CSS3</a></td>
+            <td>CompSci</td>
           </tr> -->
         </tbody>
       </table>
