--- a/exercises/courses/details.html
+++ b/exercises/courses/details.html
@@ -12,8 +12,10 @@
     </header>
     <main>
       <h1>Details</h1>
-      
+      <p></p>
+      <p></p>
+      <p></p>
     </main>
-    <script src="scripts/courses.js"></script>
+    <script src="scripts/details.js"></script>
   </body>
 </html>
