--- a/exercises/jsonplaceholder/todo.html
+++ b/exercises/jsonplaceholder/todo.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <a href="index.html">Home</a>
-        <a href="todo.html">ToDo</a>
         <a href="users.html">Users</a>
+        <a href="todo.html" class="active">To Do</a>
       </nav>
     </header>
     <main>
-      <h1>ToDo</h1>
-      <label for="toDoIdTextbox">Id</label>
-      <input type="text" id="toDoIdTextbox" />
-      <button id="displayButton">Display</button>
-      <div id="messageDiv">
-
-      </div>
+      <h1>To Do</h1>
+      <form>
+        <label for="toDoIdTextbox">To Do Id</label>
+        <input type="text" id="toDoIdTextbox" placeholder="enter id" />
+        <button type="button" id="displayButton">Display</button>
+      </form>
+      <div id="messageDiv"></div>
     </main>
     <script src="scripts/todo.js"></script>
   </body>
