--- a/exercises/jsonplaceholder/index.html
+++ b/exercises/jsonplaceholder/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="todo.html">ToDo</a>
+        <a href="index.html" class="active">Home</a>
         <a href="users.html">Users</a>
+        <a href="todo.html">ToDo</a>
       </nav>
     </header>
     <main>
