--- a/exercises/jsonplaceholder/users.html
+++ b/exercises/jsonplaceholder/users.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Users</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <a href="index.html">Home</a>
-        <a href="todo.html">ToDo</a>
-        <a href="users.html">Users</a>
+        <a href="users.html" class="active">Users</a>
+        <a href="todo.html">To Do</a>
       </nav>
     </header>
     <main>
@@ -18,25 +19,21 @@
       <table>
         <thead>
           <tr>
+            <th>Id</th>
             <th>Name</th>
-            <th>Email</th>
-            <th>Website</th>
+            <th>Username</th>
           </tr>
         </thead>
         <tbody id="usersTableBody">
-            <tr>
-                <td>Leanne Graham</td>
-                <td>Sincere@april.biz</td>
-                <td>hildegard.org</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-            </tr>
+          <tr>
+            <td>1</td>
+            <td>Leanne Graham</td>
+            <td>Bret</td>
+          </tr>
         </tbody>
       </table>
     </main>
+
     <script src="scripts/users.js"></script>
   </body>
 </html>
